Add pointer id to the WebMouseEvent's constructors

In order to make the WebMouseEvent's pointer id consistent with ui::MouseEvent, we
add pointer id to the WebMouseEvent's constructors. Then we can enable the DCHECK
of pointer id in PointerEventFactory.

BUG=694742

Review-Url: https://codereview.chromium.org/2849083002
Cr-Commit-Position: refs/heads/master@{#472106}

Former-commit-id: 2db36b51a5de1d110a0d9dbe6969ab9603df9ad8